--- a/WebsiteF4.csproj
+++ b/WebsiteF4.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\content\image\png\" />
+  </ItemGroup>
+
 </Project>
