--- a/WebsiteF4.csproj
+++ b/WebsiteF4.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.0.0-beta1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.9" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
